--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "NODE_OPTIONS='--experimental-require-module' nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start": "NODE_OPTIONS='--experimental-require-module' nest start",
+    "start:dev": "NODE_OPTIONS='--experimental-require-module' nest start --watch",
+    "start:debug": "NODE_OPTIONS='--experimental-require-module' nest start --debug --watch",
+    "start:prod": "NODE_OPTIONS='--experimental-require-module' node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -32,6 +32,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/schedule": "^6.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
@@ -43,12 +44,14 @@
     "gpt-tokenizer": "^2.9.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "p-ratelimit": "^1.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pdf-parse": "^1.1.1",
     "pg": "^8.15.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "scribe.js-ocr": "^0.8.0",
     "typeorm": "^0.3.22",
     "zod": "^3.24.3"
   },
@@ -70,6 +73,7 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/pdf-parse": "^1.1.5",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
