--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "scribe.js-ocr": "^0.8.0",
+    "ts-fsrs": "^5.0.1",
     "typeorm": "^0.3.22",
     "zod": "^3.24.3"
   },
