--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "scribe.js-ocr": "^0.8.0",
     "ts-fsrs": "^5.0.1",
     "typeorm": "^0.3.22",
+    "uuid": "^11.1.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
@@ -89,6 +90,11 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "bcrypt"
+    ]
   },
   "jest": {
     "moduleFileExtensions": [
